frontend/test/should_fail/cast_set_array.grg
using cast_model;

rule r {
	modify {
	---
		eval {
			def ref arr:array<string> = (array<string>)set<string>{"furchtbar"}; // cast not available syntactically -- only available in sequences for unboxing untyped variables -- maybe todo: make available
		}
	}
}
